--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/router": "^20.2.0",
     "@tailwindcss/postcss": "^4.1.16",
     "@tauri-apps/api": "^2.9.0",
+    "@tauri-apps/plugin-fs": "^2.4.4",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.16",
