--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,3 +28,4 @@ reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
 yup-oauth2 = { version = "12.1.0", features = ["service_account", "hyper-rustls"] }
 hyper = "1.7.0"
 hyper-rustls = "0.27.7"
+tauri-plugin-fs = "2"
