--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,7 +24,6 @@ log = "0.4"
 tauri = { version = "2.9.1", features = [] }
 tauri-plugin-log = "2"
 tokio = { version = "1.48.0", features = ["full"] }
-reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
-yup-oauth2 = { version = "12.1.0", features = ["service_account", "hyper-rustls"] }
-hyper = "1.7.0"
-hyper-rustls = "0.27.7"
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
+yup-oauth2 = { version = "12.1.0", default-features = false, features = ["service_account", "hyper-rustls", "ring"] }
+
