--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,6 +24,12 @@ log = "0.4"
 tauri = { version = "2.9.1", features = [] }
 tauri-plugin-log = "2"
 tokio = { version = "1.48.0", features = ["full"] }
-reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12.24", features = ["cookies", "json", "rustls-tls"] }
 yup-oauth2 = { version = "12.1.0", features = ["service_account", "hyper-rustls"] }
 tauri-plugin-fs = "2"
+regex = "1"
+quick-xml = "0.31"
+uuid = { version = "1", features = ["v4"] }
+anyhow = "1"
+reqwest_cookie_store = "0.8.0"
+cookie_store = "0.15"
