--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,15 +21,15 @@ tauri-build = { version = "2.5.1", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
-tauri = { version = "2.9.1", features = [] }
+tauri = { version = "2.9.1", features = ["protocol-asset"] }
 tauri-plugin-log = "2"
 tokio = { version = "1.48.0", features = ["full"] }
 reqwest = { version = "0.12.24", features = ["cookies", "json", "rustls-tls"] }
 yup-oauth2 = { version = "12.1.0", features = ["service_account", "hyper-rustls"] }
 tauri-plugin-fs = "2"
 regex = "1"
-quick-xml = "0.31"
+quick-xml = { version = "0.38.0"}
 uuid = { version = "1", features = ["v4"] }
 anyhow = "1"
-reqwest_cookie_store = "0.8.0"
-cookie_store = "0.15"
+reqwest_cookie_store = "0.9.0"
+roxmltree = "0.19"
