--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/router": "^20.2.0",
     "@fortawesome/angular-fontawesome": "^3.0.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@ngrx/signals": "^20.1.0",
     "@tailwindcss/postcss": "^4.1.16",
     "@tauri-apps/api": "^2.9.0",
     "@tauri-apps/plugin-fs": "^2.4.4",
