--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,23 +18,20 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2.5.1", features = [] }
 
 [dependencies]
-serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
 tauri = { version = "2.9.1", features = ["protocol-asset"] }
 tauri-plugin-log = "2"
 tokio = { version = "1.48.0", features = ["full"] }
-reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls-webpki-roots"] }
-yup-oauth2 = { version = "12.1.0", default-features = false, features = ["service_account", "hyper-rustls",  "ring"] }
 tauri-plugin-fs = "2"
 regex = "1"
 uuid = { version = "1", features = ["v4"] }
-anyhow = "1"
+
 reqwest_cookie_store = { version = "0.9", default-features = false }
 roxmltree = "0.21.0"
-urlencoding = "2"
-rustls = "0.23.34"
-webpki-roots = "1.0.4"
-hyper = "1.7.0"
-hyper-rustls = "0.27.7"
 
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
+jsonwebtoken = { version = "10", features = ["rust_crypto"] }
+urlencoding = "2"
+anyhow = "1"
