--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -35,3 +35,4 @@ reqwest = { version = "0.12", default-features = false, features = ["json", "rus
 jsonwebtoken = { version = "10", features = ["rust_crypto"] }
 urlencoding = "2"
 anyhow = "1"
+chrono = "0.4"
