--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -17,8 +17,15 @@ jobs:
         steps:
             - uses: actions/checkout@v4
 
-            - name: Setup GitHub CLI
-              uses: cli/cli@v3
+            - name: Cài GitHub CLI
+              run: |
+                  type -p curl >/dev/null || sudo apt install curl -y
+                  curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
+                  sudo chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg
+                  echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | \
+                    sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
+                  sudo apt update
+                  sudo apt install gh -y
 
             - name: Setup Java
               uses: actions/setup-java@v4
@@ -95,26 +102,25 @@ jobs:
               run: |
                   mv ./src-tauri/gen/android/app/build/outputs/apk/universal/release/app-universal-release.apk ./src-tauri/gen/android/app/build/outputs/apk/universal/release/bill-insight-${{ steps.package-version.outputs.current-version}}.apk
 
-
             - name: Xóa release cũ (nếu tồn tại)
               run: |
-                if gh release view "App v${{ steps.package-version.outputs.current-version}}" &>/dev/null; then
-                  echo "Deleting old release..."
-                  gh release delete "App v${{ steps.package-version.outputs.current-version}}" -y
-                else
-                  echo "No old release found."
-                fi
+                  if gh release view "App v${{ steps.package-version.outputs.current-version}}" &>/dev/null; then
+                    echo "Deleting old release..."
+                    gh release delete "App v${{ steps.package-version.outputs.current-version}}" -y
+                  else
+                    echo "No old release found."
+                  fi
               env:
-                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
             - name: Xóa tag cũ (nếu tồn tại)
               run: |
-                if git ls-remote --tags origin | grep -q "refs/tags/App v${{ steps.package-version.outputs.current-version }}"; then
-                  echo "Deleting old tag..."
-                  git push origin :refs/tags/"App v${{ steps.package-version.outputs.current-version }}"
-                else
-                  echo "No old tag found."
-                fi
+                  if git ls-remote --tags origin | grep -q "refs/tags/App v${{ steps.package-version.outputs.current-version }}"; then
+                    echo "Deleting old tag..."
+                    git push origin :refs/tags/"App v${{ steps.package-version.outputs.current-version }}"
+                  else
+                    echo "No old tag found."
+                  fi
 
             - name: Create Tag
               run: |
