--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -102,22 +102,11 @@ jobs:
               run: |
                   mv ./src-tauri/gen/android/app/build/outputs/apk/universal/release/app-universal-release.apk ./src-tauri/gen/android/app/build/outputs/apk/universal/release/bill-insight-${{ steps.package-version.outputs.current-version}}.apk
 
-            - name: Xóa release cũ (nếu tồn tại)
+            - name: Remove old tag if exists
               run: |
-                  if gh release view "App v${{ steps.package-version.outputs.current-version}}" &>/dev/null; then
-                    echo "Deleting old release..."
-                    gh release delete "App v${{ steps.package-version.outputs.current-version}}" -y
-                  else
-                    echo "No old release found."
-                  fi
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-            - name: Xóa tag cũ (nếu tồn tại)
-              run: |
-                  if git ls-remote --tags origin | grep -q "refs/tags/App v${{ steps.package-version.outputs.current-version }}"; then
+                  if git ls-remote --tags origin | grep -q "refs/tags/v${{ steps.package-version.outputs.current-version }}"; then
                     echo "Deleting old tag..."
-                    git push origin :refs/tags/"App v${{ steps.package-version.outputs.current-version }}"
+                    git push origin :refs/tags/"v${{ steps.package-version.outputs.current-version }}"
                   else
                     echo "No old tag found."
                   fi
@@ -128,6 +117,17 @@ jobs:
                   git config user.email "github-actions@github.com"
                   git tag v${{ steps.package-version.outputs.current-version }}
                   git push origin v${{ steps.package-version.outputs.current-version }}
+
+            - name: Remove old release if exists
+              run: |
+                  if gh release view "App v${{ steps.package-version.outputs.current-version}}" &>/dev/null; then
+                    echo "Deleting old release..."
+                    gh release delete "App v${{ steps.package-version.outputs.current-version}}" -y
+                  else
+                    echo "No old release found."
+                  fi
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
             - name: Publish
               uses: softprops/action-gh-release@v1
