--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -17,7 +17,7 @@ jobs:
         steps:
             - uses: actions/checkout@v4
 
-            - name: Cài GitHub CLI
+            - name: Setup GitHub CLI
               run: |
                   type -p curl >/dev/null || sudo apt install curl -y
                   curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
